--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         setTimeout(() => {
-            window.location.replace("https://symphonious-scone-1e1b67.netlify.app");
+            window.location.replace("calm-cascaron-d94963.netlify.app");
         }, 1000); // 1-second delay for better UX
     });
 </script>
